27-3-24 email problem cure

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="text-center">
                 <input
                     class="w-[90%] mx-6 my-2 p-4 border-solid border-2 border-stone-200 rounded-md placeholder:text-lg outline-none"
-                    type="email" name="Email" id="" placeholder="Phone number, username, or email" required>
+                    type="text" name="Email" id="" placeholder="Phone number, username, or email" required>
                 <input
                     class="w-[90%] mx-6 my-2 p-4 border-solid border-2 border-stone-200 rounded-md placeholder:text-lg outline-none"
                     type="password" name="Password" id="" placeholder="Password" required>
